--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Gallery</title>
 </head>
 
-<body>
+<body class="light-theme">
     <header class="header">
         <h2 class="h2">Backendless</h2>
         <nav class="nav nav-input">
@@ -18,58 +18,22 @@
             <input type="radio" id="radioButton3"><label for="radioButton3">Backendless Theme</label>
         </nav>
         <nav class="nav nav-button">
-            <button>Light Theme</button>
-            <button>Dark Theme</button>
-            <button>Backendless Theme</button>
+            <button id="light">Light Theme</button>
+            <button onclick="myFunction()" id="dark">Dark Theme</button>
+            <button id="backendless">Backendless Theme</button>
         </nav>
         <nav class="nav nav-select">
-            <select>
-            <option>Light Theme</option>
-            <option>Dark Theme</option>
-            <option>Backendless Theme</option>
+            <select name="theme-select" id="theme-select">
+            <option value="light">Light Theme</option>
+            <option value="dark">Dark Theme</option>
+            <option value="backendless">Backendless Theme</option>
           </select>
         </nav>
     </header>
     <section class="main">
         <h1 data-text="Backendless Gallery">Backendless Gallery</h1>
         </div>
-        <div class="container">
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/1080/6858/4574.jpg?hmac=qMYBjROs2Wu589QQXRAYsxDJu4ZuRQ4PKDpb3x_Oouw" alt="strawberries">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/28/4928/3264.jpg?hmac=GnYF-RnBUg44PFfU5pcw_Qs0ReOyStdnZ8MtQWJqTfA" alt="forest">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/357/3888/2592.jpg?hmac=322FsZ93_k9v7NNFeCTlqk_gobPP_1mYJIQwk7GxjMc" alt="clock">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/360/1925/1280.jpg?hmac=vX9T-qgnqfOUqLnxlsxCZfkKn_wi-9vtPKdbq7H6EgU" alt="flower">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/384/5184/3456.jpg?hmac=n_bnNJlJ4j2jW3Zry26h7ZP1AihR7zQH1_T7CiYNQK0" alt="water">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/392/5580/3720.jpg?hmac=SHJx3DtQS1aAPntmf27wp2mQ5FqQHFKh7hai6wdZSrA" alt="bridge">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/429/4128/2322.jpg?hmac=_mAS4ToWrJBx29qI2YNbOQ9IyOevQr01DEuCbArqthc" alt="raspberry">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/431/5398/3599.jpg?hmac=bc325kFqsm626RGhgs-XwG_GFqd4x3VmXtramO12qL8" alt="cup">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/466/3264/2176.jpg?hmac=idw8vAABj5gZ5zx_0StHxo-P5wP6EwV6z7Y7m58JTsc" alt="nature">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/507/3882/2912.jpg?hmac=hfaajgtH88_TZmMb24LnS2XFyW6x_MoehZOgw4tCSD8" alt="river">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/520/3456/5184.jpg?hmac=IyiGt6PJObBl0yGDXaR8iV0jtyFyOrxvfCVzXWBxr_4" alt="town">
-            </div>
-            <div class="picture">
-                <img src="https://i.picsum.photos/id/28/4928/3264.jpg?hmac=GnYF-RnBUg44PFfU5pcw_Qs0ReOyStdnZ8MtQWJqTfA" alt="forest">
-            </div>
+        <div class="container show">
             <div class="picture">
                 <img src="https://i.picsum.photos/id/1080/6858/4574.jpg?hmac=qMYBjROs2Wu589QQXRAYsxDJu4ZuRQ4PKDpb3x_Oouw" alt="strawberries">
             </div>
@@ -108,6 +72,12 @@
             </div>
 
         </div>
+
+        <div class="modal">
+            <div class="modal-box">
+                <span class="close-button">X</span>
+            </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="email">
@@ -124,6 +94,8 @@
             <img src="img/email.png">
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
