--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body class="light-theme">
     <header>
         <a href="#">
-            <h2 class="title">Backendless</h2>
+            <h2 class="site-name">Backendless</h2>
         </a>
-        <nav class="nav nav-input">
+        <nav class="nav-input">
             <input type="radio" id="light-theme" name="radio-theme" onchange="setTheme('light-theme')"><label for="light-theme">Light Theme</label>
             <input type="radio" id="dark-theme" name="radio-theme" onchange="setTheme('dark-theme')"><label for="dark-theme">Dark Theme</label>
             <input type="radio" id="backendless-theme" name="radio-theme" onchange="setTheme('backendless-theme')"><label for="backendless-theme">Backendless Theme</label>
         </nav>
-        <nav class="nav nav-button">
+        <nav class="nav-button">
             <button onclick="setTheme('light-theme')">Light Theme</button>
             <button onclick="setTheme('dark-theme')">Dark Theme</button>
             <button onclick="setTheme('backendless-theme')">Backendless Theme</button>
         </nav>
-        <nav class="nav nav-select">
+        <nav class="nav-select">
             <select name="theme-select" id="theme-select">
             <option value="light-theme">Light Theme</option>
             <option value="dark-theme">Dark Theme</option>
@@ -31,102 +31,91 @@
           </select>
         </nav>
     </header>
-    <section class="main">
-        <div class="site-name">
-            <span>B</span><span>a</span><span>c</span><span>k</span><span>e</span><span>n</span><span>d</span><span>l</span><span>e</span><span>s</span><span>s</span> &nbsp;
-            <span>G</span><span>a</span><span>l</span><span>l</span><span>e</span><span>r</span><span>y</span>
-        </div>
-        </div>
-        <div class="container show">
-            <div class="picture">
+    <main>
+        <section class="title">
+            <h1>Backendless Gallery</h1>
+        </section>
+        <section class="gallery">
+            <figure>
                 <img src="http://placehold.it/1000x601" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x602" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x603" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x604" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x605" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-            <div class="picture">
+            </figure>
+            <figure>
                 <img src="http://placehold.it/1000x600" alt="img">
-            </div>
-        </div>
-
-        <div class="modal">
-            <div class="modal-body">
-                <span class="close-button">X</span>
-                <br>
-                <br>
-                <img class="modal-body-image" alt="img">
-            </div>
-        </div>
-    </section>
+            </figure>
+        </section>
+    </main>
     <footer>
-        <div class="email">
-            <p><a href="#">Backendless.com</a></p>
-            <p><a href="#">555-555-555</a></p>
-        </div>
-        <div class="icon">
+        <address>
+            <p><a href="https://backendless.com/">Backendless.com</a></p>
+            <p><a href="tel:555-555-555">555-555-555</a></p>
+        </address>
+        <div class="icons">
             <a href="https://www.instagram.com"><img src="img/instagram.png"></a>
             <a href="https://uk-ua.facebook.com"><img src="img/facebook.png"></a>
             <a href="https://twitter.com"><img src="img/twitter.png"></a>
@@ -136,6 +125,16 @@
             <a href="https://email.com"><img src="img/email.png"></a>
         </div>
     </footer>
+
+    <aside>
+        <div class="modal-body">
+            <span class="close-button">X</span>
+            <figure>
+                <img class="modal-body-image" alt="img">
+            </figure>
+        </div>
+    </aside>
+
     <script src="index.js"></script>
 </body>
 
