--- a/index.html
+++ b/index.html
@@ -37,76 +37,76 @@
         </section>
         <section class="gallery">
             <figure>
-                <img src="http://placehold.it/1000x601" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x602" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x603" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x604" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x605" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
             <figure>
-                <img src="http://placehold.it/1000x600" alt="img">
+                <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
         </section>
     </main>
