--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </select>
         </nav>
     </header>
-    <section>
+    <main>
         <section class="title">
             <h1>Backendless Gallery</h1>
         </section>
@@ -109,7 +109,7 @@
                 <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
         </section>
-    </section>
+    </main>
     <footer>
         <address>
             <p><a href="https://backendless.com/">Backendless.com</a></p>
