--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
           </select>
         </nav>
     </header>
-    <main>
-        <section class="title">
+    <div>
+        <div class="title">
             <h1>Backendless Gallery</h1>
-        </section>
-        <section class="gallery">
+        </div>
+        <div class="gallery">
             <figure>
                 <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
@@ -108,8 +108,8 @@
             <figure>
                 <img src="https://via.placeholder.com/1000x600" alt="img">
             </figure>
-        </section>
-    </main>
+        </div>
+    </div>
     <footer>
         <address>
             <p><a href="https://backendless.com/">Backendless.com</a></p>
