add foto, edit dark theme

--- a/index.html
+++ b/index.html
@@ -11,108 +11,108 @@
 <body class="light-theme">
     <header>
         <a href="#">
-            <h2 class="site-name">Backendless</h2>
+            <h2 class="site-name">Gallery</h2>
         </a>
         <nav class="nav-input">
             <input type="radio" id="light-theme" name="radio-theme" onchange="setTheme('light-theme')"><label for="light-theme">Light Theme</label>
             <input type="radio" id="dark-theme" name="radio-theme" onchange="setTheme('dark-theme')"><label for="dark-theme">Dark Theme</label>
-            <input type="radio" id="backendless-theme" name="radio-theme" onchange="setTheme('backendless-theme')"><label for="backendless-theme">Backendless Theme</label>
+            <input type="radio" id="backendless-theme" name="radio-theme" onchange="setTheme('gallery-theme')"><label for="backendless-theme">Gallery Theme</label>
         </nav>
         <nav class="nav-button">
             <button onclick="setTheme('light-theme')">Light Theme</button>
             <button onclick="setTheme('dark-theme')">Dark Theme</button>
-            <button onclick="setTheme('backendless-theme')">Backendless Theme</button>
+            <button onclick="setTheme('gallery-theme')">Gallery Theme</button>
         </nav>
         <nav class="nav-select">
             <select name="theme-select" id="theme-select">
             <option value="light-theme">Light Theme</option>
             <option value="dark-theme">Dark Theme</option>
-            <option value="backendless-theme">Backendless Theme</option>
+            <option value="gallery-theme">Gallery Theme</option>
           </select>
         </nav>
     </header>
     <main>
         <section class="title">
-            <h1>Backendless Gallery</h1>
+            <h1> Gallery</h1>
         </section>
         <section class="gallery">
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
             <figure>
-                <img src="https://via.placeholder.com/1000x600" alt="img">
+                <img src="./img/lake.jpeg" alt="img">
             </figure>
         </section>
     </main>
     <footer>
         <address>
-            <p><a href="https://backendless.com/">Backendless.com</a></p>
+            <p><a href="https://gallery.com/">gallery.com</a></p>
             <p><a href="tel:555-555-555">555-555-555</a></p>
         </address>
         <div class="icons">
