--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav-input">
             <input type="radio" id="light-theme" name="radio-theme" onchange="setTheme('light-theme')"><label for="light-theme">Light Theme</label>
             <input type="radio" id="dark-theme" name="radio-theme" onchange="setTheme('dark-theme')"><label for="dark-theme">Dark Theme</label>
-            <input type="radio" id="backendless-theme" name="radio-theme" onchange="setTheme('gallery-theme')"><label for="backendless-theme">Gallery Theme</label>
+            <input type="radio" id="gallery-theme" name="radio-theme" onchange="setTheme('gallery-theme')"><label for="gallery-theme">Gallery Theme</label>
         </nav>
         <nav class="nav-button">
             <button onclick="setTheme('light-theme')">Light Theme</button>
