--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2 class="site-name">Gallery</h2>
         </a>
         <nav class="nav-input">
-            <input type="radio" id="light-theme" name="radio-theme" onchange="setTheme('light-theme')"><label for="light-theme">Light Theme</label>
+            <input type="radio" id="light-theme" name="radio-theme" onchange="setTheme('light-theme')" checked><label for="light-theme">Light Theme</label>
             <input type="radio" id="dark-theme" name="radio-theme" onchange="setTheme('dark-theme')"><label for="dark-theme">Dark Theme</label>
             <input type="radio" id="gallery-theme" name="radio-theme" onchange="setTheme('gallery-theme')"><label for="gallery-theme">Gallery Theme</label>
         </nav>
@@ -25,7 +25,7 @@
         </nav>
         <nav class="nav-select">
             <select name="theme-select" id="theme-select">
-            <option value="light-theme">Light Theme</option>
+            <option value="light-theme" >Light Theme</option>
             <option value="dark-theme">Dark Theme</option>
             <option value="gallery-theme">Gallery Theme</option>
           </select>
